# hadron-nobind-example-project

./: .gitignore  README.md  meson.build  meson.options  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: run.yml
hadron/: clang-win32.profile
lib/: example.cjs  example.d.cts
src/: blob.cc  blob.h  example.cc
test/: sync.test.ts
